fix tree rows with only buttons not showing

--- a/shared/css/system-style.css
+++ b/shared/css/system-style.css
@@ -43,7 +43,7 @@ td {
 	display: none;
 }
 
-.treeRow:has(.treeNode), .treeRow:has(.treeThing) {
+.treeRow:has(.treeNode), .treeRow:has(.treeButton), .treeRow:has(.treeThing) {
 	display: block;
 	margin-bottom: 50px;
 }
